--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   },
   "dependencies": {
     "astro": "^5.7.11"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.5",
+    "meyda": "^5.6.3",
+    "tailwindcss": "^4.1.5"
   }
 }
